[package]
name = "jemalloc_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = "0.3.1"
moka = { version = "0.9.4", features = ["future"] }

[profile.release]
# debug = 1 needed for DHAT profiling
debug = 1
